# chameleon

./: LICENSE  Makefile  README.md
.github/workflows/: makefile.yml
backend/: docker_compose.yml  pyproject.toml  requirements.txt
backend/chameleon/: app.py  services_init.py
backend/chameleon/db/: connection.py  groups_model.py  words.json  words_model.py
backend/chameleon/db_setup/: init.sql
backend/chameleon/routes/: main.py
backend/chameleon/services/: group.py  words.py
backend/chameleon/tests/tests_services/tests_words/: get_a_word_test.py
backend/src/: app.py
backend/src/routes/: main.py  users.py  words.py
