[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chameleon"
version = "0.0.1"
authors = [
  { name="Zeev Noiman", email="zevnoiman@gmail.com" },
]
description = "A game"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["chameleon"]